Exibindo o nome do usuário

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -4,7 +4,7 @@
         <header class="col-12">
             <div class="profile-logo col-sm-12 col-md-6 col-lg-8">
                 <img src="../../../assets/logo2.png" alt="pets" />
-                <span>Bem vindo, !</span>
+                <span>Bem vindo, {{ userName }}!</span>
                 <button type="button button-login-sm">
                     <i class="fas fa-power-off"></i>
                 </button>
