Atualizando perfil depois de um delete. Deslogar e redirecionar para o login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,6 +9,7 @@
                 <button class="button" type="submit"  (click)="tryLogin()" routerLink="/profile">Entrar</button>
             </form>
             <a class="back-link" routerLink="/cadastro">
+                <i class="fas fa-sign-in-alt"></i> 
                 Criar conta
             </a>
         </section>
