--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -15,6 +15,10 @@
         }
         a{
             margin-top: 15px;
+            i{
+                margin-right: 5px;
+                color: $detail-color;
+            }
         }
         form input{
             margin-bottom: 5px;
