--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -7,6 +7,7 @@
                 </h1>
                 <p>Faça seu cadastro, entre na plataforma e organize as informações dos seus pets.</p>
                 <a class="back-link" routerLink="/">
+                    <i class="fas fa-arrow-left"></i>
                     Voltar para home
                 </a>
             </section> 
