--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -21,6 +21,10 @@
                 margin-top: 20px;
                 margin-bottom: 20px;
                 font-size: 16px;
+                i{
+                    margin-right: 5px;
+                    color: $detail-color;
+                }
             }
         }
         form{
