--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -56,6 +56,11 @@
     }
     h1{
         font-size: 28px;
+        margin-bottom: 20px;
+        i{
+            margin-left: 5px;
+            color: $detail-color;
+        }
     }
     ul{
         display: flex;
