--- a/src/app/components/newpet/newpet.component.scss
+++ b/src/app/components/newpet/newpet.component.scss
@@ -13,6 +13,10 @@
         section{
             h1{
                 font-size: 26px;
+                i{
+                    margin-left: 5px;
+                    color: $detail-color;
+                }
             }
             p{
                 font-size: 16px;
@@ -21,6 +25,10 @@
                 margin-top: 20px;
                 margin-bottom: 20px;
                 font-size: 16px;
+                i{
+                    margin-right: 5px;
+                    color: $detail-color;
+                }
             }
         }
         form{
