--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -12,18 +12,18 @@
                 </a>
             </section> 
             <form>  
-                <input placeholder="Nome" />
+                <input placeholder="Nome" [(ngModel)]="user.name" [ngModelOptions]="{standalone: true}"/>
 
-                <input type="email" placeholder="E-mail"/>
+                <input type="email" placeholder="E-mail" [(ngModel)]="user.email" [ngModelOptions]="{standalone: true}"/>
 
-                <input type="password" placeholder="Senha" />
+                <input type="password" placeholder="Senha" [(ngModel)]="user.password" [ngModelOptions]="{standalone: true}"/>
 
                 <div class="input-group">
-                    <input placeholder="Cidade" class="col-sm-12 col-md-9 col-lg-10"/>
-                    <input placeholder="UF" class="col-sm-12 col-md-3 col-lg-2" />
+                    <input placeholder="Cidade" class="col-sm-12 col-md-9 col-lg-10" [(ngModel)]="user.city" [ngModelOptions]="{standalone: true}"/>
+                    <input placeholder="UF" class="col-sm-12 col-md-3 col-lg-2" [(ngModel)]="user.uf" [ngModelOptions]="{standalone: true}"/>
                 </div>
 
-                <button class="button" type="submit">
+                <button class="button" type="submit" (click)="register(user)">
                     Cadastrar
                 </button>
             </form>  
