--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -69,7 +69,7 @@
             </div>
             <div>
                 <strong>Gênero: </strong>
-                <p>{{ pet.gender }}</p>
+                <p>{{ gender }}</p>
             </div>
             <div>
                 <strong>Castrado: </strong>
